# nackademin-mcp-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  setup.sh  start.sh
calculator_mcp/: calculator_mcp.py
config/: custom_logging_config.py  logging_config.py
nackademin-mcp-demo/: .gitignore  README.md  requirements.txt
nackademin-mcp-demo/calculator_mcp/: calculator_mcp.py
nackademin-mcp-demo/config/: custom_logging_config.py  logging_config.py
nackademin-mcp-demo/documentation/: fastMcp-docs.md
nackademin-mcp-demo/weather_mcp/: weather_client.py  weather_server.py
weather_mcp/: weather_client.py  weather_server.py
