[project]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name" }
]
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=3.0.2",
    "httpx",
    "pytz",
    "markdown",
    "reportlab",
    "Pygments",
    "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"